cmake_minimum_required(VERSION 3.22)

enable_language(C CXX ASM)

# Setup compiler settings
set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_C_EXTENSIONS ON)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS ON)


set(ThreadX_App_Custom 
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/inc/
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/ports/cortex_m4/gnu/inc/
    ${CMAKE_SOURCE_DIR}/AZURE_RTOS/App
    )
set(ThreadX_Src
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/ports/cortex_m4/gnu/src/tx_thread_context_restore.S
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/ports/cortex_m4/gnu/src/tx_thread_context_save.S
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/ports/cortex_m4/gnu/src/tx_thread_interrupt_control.S
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/ports/cortex_m4/gnu/src/tx_thread_schedule.S
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/ports/cortex_m4/gnu/src/tx_thread_stack_build.S
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/ports/cortex_m4/gnu/src/tx_thread_system_return.S
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/ports/cortex_m4/gnu/src/tx_timer_interrupt.S
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_initialize_high_level.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_initialize_kernel_enter.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_initialize_kernel_setup.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_block_allocate.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_block_pool_cleanup.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_block_pool_create.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_block_pool_delete.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_block_pool_info_get.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_block_pool_initialize.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_block_pool_prioritize.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_block_release.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_byte_allocate.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_byte_pool_cleanup.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_byte_pool_create.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_byte_pool_delete.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_byte_pool_info_get.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_byte_pool_initialize.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_byte_pool_prioritize.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_byte_pool_search.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_byte_release.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_event_flags_cleanup.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_event_flags_create.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_event_flags_delete.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_event_flags_get.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_event_flags_info_get.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_event_flags_initialize.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_event_flags_set.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_event_flags_set_notify.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_mutex_cleanup.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_mutex_create.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_mutex_delete.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_mutex_get.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_mutex_info_get.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_mutex_initialize.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_mutex_prioritize.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_mutex_priority_change.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_mutex_put.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_queue_cleanup.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_queue_create.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_queue_delete.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_queue_flush.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_queue_front_send.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_queue_info_get.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_queue_initialize.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_queue_prioritize.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_queue_receive.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_queue_send.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_queue_send_notify.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_semaphore_ceiling_put.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_semaphore_cleanup.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_semaphore_create.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_semaphore_delete.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_semaphore_get.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_semaphore_info_get.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_semaphore_initialize.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_semaphore_prioritize.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_semaphore_put.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_semaphore_put_notify.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_thread_create.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_thread_delete.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_thread_entry_exit_notify.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_thread_identify.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_thread_info_get.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_thread_initialize.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_thread_preemption_change.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_thread_priority_change.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_thread_relinquish.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_thread_reset.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_thread_resume.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_thread_shell_entry.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_thread_sleep.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_thread_stack_analyze.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_thread_stack_error_handler.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_thread_stack_error_notify.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_thread_suspend.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_thread_system_preempt_check.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_thread_system_resume.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_thread_system_suspend.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_thread_terminate.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_thread_time_slice.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_thread_time_slice_change.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_thread_timeout.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_thread_wait_abort.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_time_get.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_time_set.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/txe_block_allocate.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/txe_block_pool_create.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/txe_block_pool_delete.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/txe_block_pool_info_get.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/txe_block_pool_prioritize.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/txe_block_release.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/txe_byte_allocate.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/txe_byte_pool_create.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/txe_byte_pool_delete.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/txe_byte_pool_info_get.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/txe_byte_pool_prioritize.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/txe_byte_release.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/txe_event_flags_create.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/txe_event_flags_delete.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/txe_event_flags_get.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/txe_event_flags_info_get.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/txe_event_flags_set.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/txe_event_flags_set_notify.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/txe_mutex_create.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/txe_mutex_delete.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/txe_mutex_get.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/txe_mutex_info_get.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/txe_mutex_prioritize.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/txe_mutex_put.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/txe_queue_create.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/txe_queue_delete.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/txe_queue_flush.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/txe_queue_front_send.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/txe_queue_info_get.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/txe_queue_prioritize.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/txe_queue_receive.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/txe_queue_send.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/txe_queue_send_notify.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/txe_semaphore_ceiling_put.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/txe_semaphore_create.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/txe_semaphore_delete.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/txe_semaphore_get.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/txe_semaphore_info_get.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/txe_semaphore_prioritize.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/txe_semaphore_put.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/txe_semaphore_put_notify.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/txe_thread_create.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/txe_thread_delete.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/txe_thread_entry_exit_notify.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/txe_thread_info_get.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/txe_thread_preemption_change.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/txe_thread_priority_change.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/txe_thread_relinquish.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/txe_thread_reset.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/txe_thread_resume.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/txe_thread_suspend.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/txe_thread_terminate.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/txe_thread_time_slice_change.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/txe_thread_wait_abort.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_timer_activate.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_timer_change.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_timer_create.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_timer_deactivate.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_timer_delete.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_timer_expiration_process.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_timer_info_get.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_timer_initialize.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_timer_system_activate.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_timer_system_deactivate.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/tx_timer_thread_entry.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/txe_timer_activate.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/txe_timer_change.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/txe_timer_create.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/txe_timer_deactivate.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/txe_timer_delete.c
    ${CMAKE_SOURCE_DIR}/Middlewares/ST/threadx/common/src/txe_timer_info_get.c
)

# Create ThreadX static library
add_library(ThreadX OBJECT)
target_sources(ThreadX PRIVATE ${ThreadX_Src}) 
target_include_directories(ThreadX PUBLIC ${ThreadX_App_Custom})
target_link_libraries(ThreadX PUBLIC stm32cubemx)


add_library(ThreadXWrapper INTERFACE)
target_link_libraries(ThreadXWrapper INTERFACE stm32cubemx ThreadX)
target_include_directories(ThreadXWrapper INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})